--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Blog mit den Beiträge vom Modul "Bibliotheks- und Archivinformatik"
+title: Blog mit den Beiträgen vom Modul "Bibliotheks- und Archivinformatik"
 author: Ibrahim
 email: ibrahim.akoezel@stud.fhgr.ch
 description: > # this means to ignore newlines until "baseurl:"
